# uasat-rs

./: .gitignore  Cargo.toml  README.md  deploy.sh
docs/: index.html  index.js  uasat.js  uasat_bg.wasm  uasatlib.js  uasatlib_bg.wasm  uasatrs.js  uasatrs_bg.wasm
src/: array.rs  binary.rs  bitvec.rs  boolalg.rs  boolean.rs  boolvec.rs  clone.rs  genvec.rs  lexer.rs  lib.rs  main.rs  parser.rs  posets.rs  progress.rs  relation.rs  semantics.rs  solver.rs  tensor.rs  test.rs  testing.rs
src/adt/: boolean.rs  mod.rs  operations.rs  power.rs  product.rs  relation.rs  relations.rs  small_set.rs  traits.rs  validate.rs
src/alg/: algebra.rs  binary_numbers.rs  binary_relations.rs  binary_vectors.rs  bipart_graphs.rs  boolean.rs  boolean_logic.rs  fixed_set.rs  free_boolean_alg.rs  functions.rs  mod.rs  operations.rs  permutations.rs  power.rs  preservation.rs  product.rs  product_algebra.rs  rel_clone.rs  relations.rs  small_integers.rs  small_set.rs  solver_logic.rs  structure.rs  traits.rs  trivial_algebra.rs  two_element_alg.rs  unary_operations.rs  validate.rs  wrap_elem.rs
src/array/: mod.rs  packed.rs
src/array2/: mod.rs  packed.rs
src/core/: bitvec.rs  boolean.rs  genvec.rs  mod.rs  solver.rs  tensor.rs
src/core2/: boolean.rs  mod.rs  solver.rs  traits.rs
src/genvec/: bitvec.rs  mod.rs  tests.rs  traits.rs  unitvec.rs  vec.rs
src/math/: algebra.rs  binrel.rs  blocker.rs  extremeconn.rs  mod.rs  obstruction.rs  taylor.rs  test.rs  validate.rs
src/old/: binary.rs  lexer.rs  mod.rs  parser.rs  relation.rs  structure.rs  testing.rs
src/research/: mod.rs  poset.rs
