[package]
name = "uasat"
description = "A SAT solver based discrete mathematics and universal algebra calculator"
license = "GPLv3"
authors = ["Miklos Maroti <mmaroti@gmail.com>"]
version = "0.1.6"
edition = "2018"
repository = "https://github.com/mmaroti/uasat-rs"

[features]
default = ["cadical", "batsat"]

[dependencies]
bit-vec = "0.6"
lazy_static = "1.4"
minisat = { version = "0.4", optional = true }
varisat = { version = "0.2", optional = true }
cryptominisat = { version = "5.6", optional = true }
batsat = { version = "0.4", optional = true }
cadical = { version = "0.1", optional = true }

[dev-dependencies]
clippy = "*"

[profile.release]
lto = true
