[package]
name = "uasat"
description = "A SAT solver based discrete mathematics and universal algebra calculator"
license = "GPLv3"
authors = ["Miklos Maroti <mmaroti@gmail.com>"]
version = "0.1.7"
edition = "2018"
repository = "https://github.com/mmaroti/uasat-rs"

[features]
default = ["cadical", "batsat", "minisat", "cryptominisat", "varisat"]

[dependencies]
lazy_static = "1.4"
minisat = { version = "0.4", optional = true }
varisat = { version = "0.2", optional = true }
cryptominisat = { version = "5.8", optional = true }
batsat = { version = "0.5", optional = true }
cadical = { version = "0.1", optional = true }

[profile.release]
lto = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
